--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-58</title>
+    <title>EBS Entry v0-60</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -23,20 +23,18 @@
         input, select, textarea { width: 100%; padding: 8px; border: 1px solid #dcdde1; border-radius: 6px; font-size: 0.85rem; box-sizing: border-box; height: 38px; }
         textarea { height: auto; }
         .date-wrap { display: flex; align-items: center; gap: 8px; }
-        #dateBtn { width: 45px; height: 38px; cursor: pointer; background: #fff; border: 1px solid #dcdde1; border-radius: 6px; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; padding: 0; }
+        #dateBtn { width: 45px; height: 38px; cursor: pointer; background: #fff; border: 1px solid #dcdde1; border-radius: 6px; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; }
         #colC { position: absolute; visibility: hidden; width: 0; height: 0; }
         #colCDisp { font-size: 0.85rem; color: var(--primary); font-weight: 500; }
-        .type-display { font-size: 0.85rem; font-weight: bold; color: var(--primary); text-align: center; height: 38px; line-height: 22px; }
+        .type-display { font-size: 0.85rem; font-weight: bold; color: var(--primary); text-align: center; height: 38px; line-height: 22px; border: none; background: transparent; }
         .total-box { background: #e8f5e9; border: 2px dashed var(--accent); padding: 10px; border-radius: 8px; text-align: center; margin: 15px 0; }
         .total-val { font-size: 1.3rem; font-weight: bold; color: var(--accent); }
         .actions { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; }
-        button { padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; transition: 0.2s; height: auto; }
-        button:disabled { background: #bdc3c7 !important; cursor: not-allowed; }
-        .btn-save { background: var(--accent); }
+        button { padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; transition: 0.2s; }
         .btn-sync { background: var(--bridge); }
         .btn-clear { background: var(--danger); width: 100%; margin-top: 15px; opacity: 0.6; }
         .btn-clear.active { opacity: 1; border: 2px solid #000; }
-        #auth_status { font-size: 0.65rem; margin-top: 5px; text-align: center; color: #7f8c8d; font-weight: bold; }
+        #auth_status { font-size: 0.65rem; margin-top: 5px; text-align: center; color: #7f8c8d; }
         .preview-wrap { overflow-x: auto; margin-top: 15px; }
         table { width: 100%; border-collapse: collapse; font-size: 0.58rem; table-layout: fixed; }
         th, td { border: 1px solid #ddd; padding: 4px 1px; text-align: left; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
@@ -44,15 +42,14 @@
         .w-grp { width: 35px; } .w-fu { width: 22px; } .w-date { width: 70px; } .w-type { width: 32px; }
         .w-cat { width: 70px; } .w-sort { width: 15px; text-align: center; } 
         .w-acc { width: 65px; } .w-tiny { width: 14px; text-align: center; }
-        .w-cur { width: 22px; text-align: center; } .w-tot { width: 45px; text-align: right; }
-        .w-mnth { width: 35px; text-align: center; } .w-del { width: 22px; text-align: center; }
+        .w-tot { width: 45px; text-align: right; }
         .txt-center { text-align: center !important; }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-58)</span></h3>
+        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-60)</span></h3>
         <button class="btn-lookup" onclick="fetchLookups()">Refresh Lookups</button>
     </div>
     <div id="auth_status">Bridge Status: Initializing...</div>
@@ -64,14 +61,14 @@
     </div>
 
     <div class="grid-cat">
-        <div><label>Category</label><select id="colF" required onchange="calcTypeAndAuto()"><option value="" disabled selected>-- Select Category --</option></select></div>
+        <div><label>Category</label><select id="colF" required onchange="calcTypeAndAuto()"><option value="" disabled selected>-- Select --</option></select></div>
         <div><label style="text-align:center;">Type</label><div id="workTypeDisplay" class="type-display">--</div></div>
         <div><label>sort</label><input type="number" id="colG" placeholder="0" min="0" max="99"></div>
     </div>
 
     <div class="grid-acc">
-        <div><label>From</label><select id="colH" required onchange="calcTypeAndAuto()"><option value="" disabled selected>-- Select From --</option></select></div>
-        <div><label>To</label><select id="colI" required onchange="calcTypeAndAuto()"><option value="" disabled selected>-- Select To --</option></select></div>
+        <div><label>From</label><select id="colH" required onchange="calcTypeAndAuto()"><option value="" disabled selected>-- From --</option></select></div>
+        <div><label>To</label><select id="colI" required onchange="calcTypeAndAuto()"><option value="" disabled selected>-- To --</option></select></div>
     </div>
 
     <div style="margin-top:10px;"><label>Note</label><textarea id="colK" rows="2"></textarea></div>
@@ -84,7 +81,7 @@
 
     <div class="grid-4">
         <div><label>Each</label><input type="number" id="colT" placeholder="0.00" step="0.01" oninput="calc()"></div>
-        <div><label>Currency</label><select id="colX" onchange="calc()"><option value="GBP" selected>GBP</option><option value="EUR">EUR</option><option value="COP">COP</option></select></div>
+        <div><label>Currency</label><select id="colX" onchange="calc()"><option value="GBP" selected>GBP</option><option value="COP">COP</option></select></div>
         <div><label>Fees</label><input type="number" id="colV" placeholder="0.00" step="0.01" oninput="calc()"></div>
         <div><label>Multiplier</label><input type="number" id="colM" value="1" step="0.01" oninput="calc()"></div>
     </div>
@@ -102,7 +99,7 @@
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "EBS Entry v0-58";
+    const VER = "Excel Budget Sheet input (v0-60)";
     let AA_LIST = [];
     const symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
@@ -114,43 +111,47 @@
     async function fetchLookups() {
         tokenClient.callback = async (resp) => {
             try {
-                const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'Lookups!A2:J100' });
+                const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'Lookups!A2:L100' });
                 const rows = res.result.values; if(!rows) return;
                 
-                const processPair = (rows, valIdx, descIdx) => rows.map(r => r[valIdx] ? (r[descIdx] ? `${r[valIdx]} - ${r[descIdx]}` : r[valIdx]) : null).filter(v => v);
+                const getCombined = (r, code, desc) => r[code] ? (r[desc] ? `${r[code]} - ${r[desc]}` : r[code]) : null;
 
-                updateDropdown('colB', processPair(rows, 0, 1));
-                updateDropdown('colA', rows.map(r => r[2]).filter(v => v));
-                updateDropdown('colF', processPair(rows, 3, 4));
-                const accs = processPair(rows, 5, 6);
+                updateDropdown('colA', rows.map(r => r[0]).filter(v => v)); // Column A (Grouping)
+                updateDropdown('colB', rows.map(r => getCombined(r, 1, 2)).filter(v => v)); // B & C (F/U)
+                updateDropdown('colF', rows.map(r => r[6]).filter(v => v)); // Column G (Category)
+                const accs = rows.map(r => getCombined(r, 8, 9)).filter(v => v); // I & J (Accounts)
                 updateDropdown('colH', accs); updateDropdown('colI', accs);
-                updateDropdown('colFreq', processPair(rows, 7, 8));
-                updateDropdown('colZ', rows.map(r => r[9]).filter(v => v));
-                AA_LIST = rows.map(r => r[5]).filter(v => v);
+                updateDropdown('colFreq', rows.map(r => r[10]).filter(v => v)); // Frequency placeholder check
+                updateDropdown('colZ', rows.map(r => r[11]).filter(v => v)); // Column L (Mnth)
+                AA_LIST = rows.map(r => r[8]).filter(v => v); // Internal account codes
                 alert("Lookups Refreshed!");
-            } catch (e) { alert("Refresh Error: Ensure tab 'Lookups' matches the layout."); }
+            } catch (e) { alert("Refresh Error: Ensure blue headers in Row 1."); }
         };
         tokenClient.requestAccessToken();
     }
 
     function updateDropdown(id, vals) {
-        const sel = document.getElementById(id); const cur = sel.value;
+        const sel = document.getElementById(id); if(!sel) return;
+        const cur = sel.value;
         sel.innerHTML = vals.map(v => `<option value="${v}">${v}</option>`).join('');
         if(vals.includes(cur)) sel.value = cur;
     }
 
     function calcTypeAndAuto() {
         const hFull = document.getElementById('colH').value, iFull = document.getElementById('colI').value, fFull = document.getElementById('colF').value;
-        const h = hFull.split(' - ')[0], i = iFull.split(' - ')[0], f = fFull.split(' - ')[0];
+        const h = hFull.split(' - ')[0], i = iFull.split(' - ')[0];
         const bgE = document.getElementById('bgTypeE'), workE = document.getElementById('workTypeDisplay'), fu = document.getElementById('colB');
         if (!h || !i) return;
         const fAA = AA_LIST.includes(h), tAA = AA_LIST.includes(i);
         let valE = "zOut"; if (fAA && tAA) valE = "xfer"; else if (!fAA && tAA) valE = "In";
         bgE.value = valE; workE.innerText = valE;
-        if (valE === "xfer") { fu.value = fu.options[fu.options.length-1].value; document.getElementById('colF').value = "Transfer"; }
-        else if (iFull.toLowerCase().includes("support") || fFull.toLowerCase().includes("support")) { 
-            const sOpt = Array.from(fu.options).find(o => o.text.startsWith('S'));
-            if(sOpt) fu.value = sOpt.value;
+        if (valE === "xfer") { 
+            const xf = Array.from(fu.options).find(o => o.value.startsWith('xf'));
+            if(xf) fu.value = xf.value;
+            document.getElementById('colF').value = "Transfer"; 
+        } else if (iFull.toLowerCase().includes("support") || fFull.toLowerCase().includes("support")) {
+            const s = Array.from(fu.options).find(o => o.value.startsWith('S'));
+            if(s) fu.value = s.value;
         }
     }
 
@@ -159,9 +160,8 @@
         const dStr = document.getElementById('colC').value; if(!dStr) return;
         const [y, m, d] = dStr.split('-').map(Number); const dt = new Date(y, m-1, d);
         const days = ['Sun','Mon','Tue','Wed','Thu','Fri','Sat'], mos = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
-        document.getElementById('colCDisp').innerText = `${days[dt.getDay()]} ${dateToDisplay(dt)}`;
+        document.getElementById('colCDisp').innerText = `${days[dt.getDay()]} ${dt.getDate()} ${mos[dt.getMonth()]} '${String(dt.getFullYear()).substr(-2)}`;
     }
-    const dateToDisplay = (d) => `${d.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][d.getMonth()]} '${String(d.getFullYear()).substr(-2)}`;
 
     window.onload = () => { 
         document.getElementById('colC').value = new Date().toISOString().split('T')[0]; 
@@ -176,7 +176,7 @@
     }
 
     function saveRow() {
-        if (document.getElementById('bgTypeE').value === "--") return alert("Error: Select accounts.");
+        calcTypeAndAuto(); if (document.getElementById('bgTypeE').value === "--") return alert("Error: Select accounts.");
         const row = [document.getElementById('colA').value, document.getElementById('colB').value.split(' - ')[0], document.getElementById('colC').value, "", document.getElementById('bgTypeE').value, document.getElementById('colF').value.split(' - ')[0], document.getElementById('colG').value, document.getElementById('colH').value.split(' - ')[0], document.getElementById('colI').value.split(' - ')[0], "", document.getElementById('colK').value, document.getElementById('colFreq').value.split(' - ')[0], "", "", document.getElementById('colStatus').value.split(' - ')[0], "", "", "", "", parseFloat(document.getElementById('colT').value||0).toFixed(2), document.getElementById('colM').value, parseFloat(document.getElementById('colV').value||0).toFixed(2), calc(), document.getElementById('colX').value, "", document.getElementById('colZ').value, VER];
         let data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); data.push(row); localStorage.setItem('ebs_trf', JSON.stringify(data));
         ['colT', 'colV', 'colK', 'colG'].forEach(id => document.getElementById(id).value = ""); renderPreview();
@@ -187,7 +187,8 @@
         let h = '<table><tr><th class="w-grp">Grp</th><th class="w-fu">F/U</th><th class="w-date">Date</th><th class="w-type">Type</th><th class="w-cat">Category</th><th class="w-sort">s</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-tiny">N</th><th class="w-tiny">F</th><th class="w-tiny">S</th><th class="w-cur txt-center">Cur</th><th class="w-tot">Total</th><th class="w-mnth txt-center">Mnth</th><th class="w-del"></th></tr>';
         data.forEach((r, idx) => {
             const [y, m, d] = r[2].split('-').map(Number); const dt = new Date(y, m-1, d);
-            h += `<tr><td>${r[0]}</td><td>${r[1]}</td><td>${dateToDisplay(dt)}</td><td>${r[4]}</td><td>${r[5]}</td><td class="txt-center">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-tiny">${r[10]?"✓":""}</td><td class="w-tiny">${r[11]}</td><td class="w-tiny">${r[14]}</td><td class="txt-center">${r[23]}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[25]}</td><td class="w-del"><button onclick="deleteRow(${idx})" style="background:red;padding:2px 5px;border:none;color:white;">X</button></td></tr>`;
+            const dS = `${dt.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]}`;
+            h += `<tr><td>${r[0]}</td><td>${r[1]}</td><td>${dS}</td><td>${r[4]}</td><td>${r[5]}</td><td class="txt-center">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-tiny">${r[10]?"✓":""}</td><td class="w-tiny">${r[11]}</td><td class="w-tiny">${r[14]}</td><td class="txt-center">${r[23]}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[25]}</td><td class="w-del"><button onclick="deleteRow(${idx})" style="background:red;padding:2px 5px;border:none;color:white;">X</button></td></tr>`;
         });
         document.getElementById('previewArea').innerHTML = h + '</table>';
     }
