--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-76</title>
+    <title>EBS Entry v0-77</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -24,15 +24,13 @@
         textarea { height: auto; }
         .date-wrap { display: flex; align-items: center; gap: 8px; }
         #dateBtn { width: 45px; height: 38px; cursor: pointer; background: #fff; border: 1px solid #dcdde1; border-radius: 6px; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; }
-        #colC { position: absolute; visibility: hidden; width: 0; height: 0; }
         #colCDisp { font-size: 0.85rem; color: var(--primary); font-weight: 500; }
         .type-display { font-size: 0.85rem; font-weight: bold; color: var(--primary); text-align: center; height: 38px; line-height: 36px; border: 1px solid #dcdde1; border-radius: 6px; background: #f1f2f6; box-sizing: border-box; cursor: default; }
         .total-box { background: #e8f5e9; border: 2px dashed var(--accent); padding: 10px; border-radius: 8px; text-align: center; margin: 15px 0; }
         .total-val { font-size: 1.3rem; font-weight: bold; color: var(--accent); }
         .actions { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; }
-        button { padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; transition: 0.2s; height: auto; }
+        button { padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; transition: 0.2s; }
         button:disabled { background: #bdc3c7 !important; cursor: not-allowed; }
-        .btn-save { background: var(--accent); }
         .btn-sync { background: var(--bridge); }
         .btn-clear { background: var(--danger); width: 100%; margin-top: 15px; opacity: 0.6; }
         #auth_status { font-size: 0.65rem; margin-top: 5px; text-align: center; color: #7f8c8d; }
@@ -50,14 +48,14 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-76)</span></h3>
+        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-77)</span></h3>
         <button class="btn-lookup" onclick="fetchLookups()">Refresh<br>Lookups</button>
     </div>
     <div id="auth_status">Bridge Status: Initializing...</div>
     <div class="grid-top">
         <div><label>F/U</label><select id="colB" onchange="handleManualFU()"></select></div>
         <div><label>Grouping</label><select id="colA"></select></div>
-        <div><label>Date</label><div class="date-wrap"><button id="dateBtn" onclick="document.getElementById('colC').showPicker()">📅</button><input type="date" id="colC" onchange="handleDateChange()"><div id="colCDisp"></div></div></div>
+        <div><label>Date</label><div class="date-wrap"><button id="dateBtn" onclick="document.getElementById('colC').showPicker()">📅</button><input type="date" id="colC" style="visibility:hidden;width:0;position:absolute;" onchange="handleDateChange()"><div id="colCDisp"></div></div></div>
     </div>
     <div class="grid-cat">
         <div><label>Category</label><select id="colF" required onchange="calcTypeAndAuto()"></select></div>
@@ -91,7 +89,7 @@
 </div>
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet input (v0-76)";
+    const VER = "Excel Budget Sheet input (v0-77)";
     let AA_LIST = [];
     const symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
@@ -114,9 +112,12 @@
                 updateDropdown('colI', rows.map(r => r[9]).filter(v => v), null, '--Select--'); 
                 updateDropdown('colFreq', rows.map(r => p(r, 12, 13)).filter(v => v), 'A'); 
                 updateDropdown('colStatus', rows.map(r => p(r, 16, 17)).filter(v => v), 'N'); 
-                updateDropdown('colZ', rows.map(r => r[25]).filter(v => v), 'NEW'); // index 25 = Z
-                updateDropdown('colX', rows.map(r => r[26]).filter(v => v), 'GBP'); // index 26 = AA
                 
+                // Hardened Month retrieval: index 25 corresponds to column Z
+                const monthVals = rows.map(r => r[25]).filter(v => v && v.trim() !== "");
+                updateDropdown('colZ', monthVals, 'NEW'); 
+                
+                updateDropdown('colX', rows.map(r => r[26]).filter(v => v), 'GBP'); 
                 AA_LIST = rows.map(r => r[8]).filter(v => v);
                 calc(); if(!silent) alert("Lookups Refreshed!");
             } catch (e) { if(!silent) alert("Refresh Error."); }
@@ -138,7 +139,7 @@
     function calcTypeAndAuto() {
         const h = document.getElementById('colH').value, i = document.getElementById('colI').value, fFull = document.getElementById('colF').value;
         const fu = document.getElementById('colB'), typeDisp = document.getElementById('workTypeDisplay'), bgE = document.getElementById('bgTypeE');
-        if (!h || !i) { typeDisp.innerText = "--"; bgE.value = "--"; return; }
+        if (!h || !i || h.includes("--") || i.includes("--")) { typeDisp.innerText = "--"; bgE.value = "--"; return; }
         const fAA = AA_LIST.includes(h), tAA = AA_LIST.includes(i);
         let valE = "zOut"; if (fAA && tAA) valE = "xfer"; else if (!fAA && tAA) valE = "In";
         typeDisp.innerText = valE; bgE.value = valE;
@@ -160,8 +161,7 @@
     function calc() {
         const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0;
         const tot = ((t * u) + v).toFixed(2);
-        const curValue = document.getElementById('colX').value;
-        const curCode = curValue ? curValue.split(' - ')[0] : 'GBP';
+        const curCode = document.getElementById('colX').value.split(' - ')[0] || 'GBP';
         document.getElementById('symbol').innerText = symbols[curCode]||"£";
         document.getElementById('totalDisp').innerText = tot; return tot;
     }
