--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-89</title>
+    <title>EBS Entry v0-90</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -21,26 +21,24 @@
         .grid-4 { display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; gap: 8px; margin-top: 10px; }
         label { font-size: 0.7rem; font-weight: 700; display: block; margin-bottom: 2px; }
         input, select, textarea { width: 100%; padding: 8px; border: 1px solid #dcdde1; border-radius: 6px; font-size: 0.85rem; box-sizing: border-box; height: 38px; }
-        textarea { height: auto; }
-        .date-wrap { display: flex; align-items: center; gap: 8px; }
-        #dateBtn { width: 45px; height: 38px; cursor: pointer; background: #fff; border: 1px solid #dcdde1; border-radius: 6px; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; }
-        #colCDisp { font-size: 0.85rem; color: var(--primary); font-weight: 500; }
         .type-display { font-size: 0.85rem; font-weight: bold; color: var(--primary); text-align: center; height: 38px; line-height: 36px; border: 1px solid #dcdde1; border-radius: 6px; background: #f1f2f6; box-sizing: border-box; cursor: default; }
         .total-box { background: #e8f5e9; border: 2px dashed var(--accent); padding: 10px; border-radius: 8px; text-align: center; margin: 15px 0; }
         .total-val { font-size: 1.3rem; font-weight: bold; color: var(--accent); }
         .actions { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; }
         button { padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; transition: 0.2s; height: auto; }
         button:disabled { background: #bdc3c7 !important; cursor: not-allowed; }
-        .btn-save { background: var(--accent); }
         .btn-sync { background: var(--bridge); }
         .btn-clear { background: var(--danger); width: 100%; margin-top: 15px; opacity: 0.6; }
         #auth_status { font-size: 0.65rem; margin-top: 5px; text-align: center; color: #7f8c8d; }
         .preview-wrap { overflow-x: auto; margin-top: 15px; }
+        
+        /* Staging Width Adjustments v0-90 */
         table { width: 100%; border-collapse: collapse; font-size: 0.58rem; table-layout: fixed; }
         th, td { border: 1px solid #ddd; padding: 4px 2px; text-align: left; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
         th { background: #f2f2f2; font-weight: bold; }
         .w-grp { width: 35px; } .w-fu { width: 22px; } .w-date { width: 68px; } .w-type { width: 32px; }
         .w-cat, .w-acc { width: 110px; } .w-tiny { width: 15px; text-align: center; }
+        .w-sort { width: 15px; text-align: center; } /* Reduced for CHAR1 v0-90 */
         .w-tot { width: 45px; text-align: right; }
         .txt-center { text-align: center !important; }
     </style>
@@ -48,37 +46,36 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-89)</span></h3>
+        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-90)</span></h3>
         <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
     </div>
     <div id="auth_status">Bridge Status: Initializing...</div>
     <div class="grid-top">
-        <div><label>F/U</label><select id="colB" onchange="handleManualFU()"></select></div>
+        <div><label>F/U</label><select id="colB"></select></div>
         <div><label>Grouping</label><select id="colA"></select></div>
-        <div><label>Date</label><div class="date-wrap"><button id="dateBtn" onclick="document.getElementById('colC').showPicker()">📅</button><input type="date" id="colC" style="visibility:hidden;width:0;position:absolute;" onchange="handleDateChange()"><div id="colCDisp"></div></div></div>
+        <div><label>Date</label><div class="date-wrap"><button onclick="document.getElementById('colC').showPicker()" style="height:38px; border:1px solid #ddd; border-radius:6px; background:#fff; width:40px;">📅</button><input type="date" id="colC" style="visibility:hidden; width:0; position:absolute;" onchange="handleDateChange()"><span id="colCDisp" style="font-size:0.8rem; margin-left:5px;"></span></div></div>
     </div>
     <div class="grid-cat">
-        <div><label>Category</label><select id="colF" required onchange="calcTypeAndAuto()"></select></div>
+        <div><label>Category</label><select id="colF" required></select></div>
         <div><label style="text-align:center;">Type</label><div id="workTypeDisplay" class="type-display">--</div></div>
         <div><label>sort</label><input type="number" id="colG" placeholder="0"></div>
     </div>
     <div class="grid-acc">
-        <div><label>From</label><select id="colH" required onchange="calcTypeAndAuto()"></select></div>
-        <div><label>To</label><select id="colI" required onchange="calcTypeAndAuto()"></select></div>
+        <div><label>From</label><select id="colH" required onchange="handleAccountSelection()"></select></div>
+        <div><label>To</label><select id="colI" required onchange="handleAccountSelection()"></select></div>
     </div>
-    <div style="margin-top:10px;"><label>Note</label><textarea id="colK" rows="2"></textarea></div>
     <div class="grid-3">
         <div><label>Frequency</label><select id="colFreq"></select></div>
         <div><label>Status</label><select id="colStatus"></select></div>
         <div><label>Mnth</label><select id="colZ"></select></div>
     </div>
     <div class="grid-4">
-        <div><label>Each</label><input type="number" id="colT" placeholder="0.00" step="0.01" oninput="calc()"></div>
+        <div><label>Each</label><input type="number" id="colT" placeholder="0.00" oninput="calc()"></div>
         <div><label>Currency</label><select id="colX" onchange="calc()"></select></div>
-        <div><label>Fees</label><input type="number" id="colV" placeholder="0.00" step="0.01" oninput="calc()"></div>
-        <div><label>Multiplier</label><input type="number" id="colM" value="1" step="0.01" oninput="calc()"></div>
+        <div><label>Fees</label><input type="number" id="colV" placeholder="0.00" oninput="calc()"></div>
+        <div><label>Multiplier</label><input type="number" id="colM" value="1" oninput="calc()"></div>
     </div>
-    <div class="total-box"><label>Total</label><div class="total-val"><span id="symbol">£</span> <span id="totalDisp">0.00</span></div></div>
+    <div class="total-box"><div class="total-val"><span id="symbol">£</span> <span id="totalDisp">0.00</span></div></div>
     <div class="actions">
         <button class="btn-save" onclick="saveRow()" style="background:var(--accent);">Stage Transaction</button>
         <button class="btn-sync" id="sync_btn" onclick="handleSync()" disabled>Send to Sheets</button>
@@ -90,7 +87,6 @@
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet input (v0-89)";
     let AA_LIST = [];
     let coordinateMap = {};
     const symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
@@ -114,13 +110,7 @@
     async function fetchLookupRefs(silent) {
         try {
             const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'LookupRefs!A2:C15' });
-            const rows = res.result.values;
-            rows.forEach(r => { 
-                coordinateMap[r[0]] = { 
-                    val: colToIndex(r[1]), 
-                    desc: (r[2] && r[2].toLowerCase() !== 'n/a') ? colToIndex(r[2]) : null 
-                }; 
-            });
+            res.result.values.forEach(r => { coordinateMap[r[0]] = { val: colToIndex(r[1]), desc: (r[2] && r[2].toLowerCase() !== 'n/a') ? colToIndex(r[2]) : null }; });
             fetchActualData(silent);
         } catch (e) { alert("Ref Error."); }
     }
@@ -137,49 +127,37 @@
                 });
                 updateDropdown(id, list, def, prompt);
             };
-            pop('colA', 'Grouping', 'Roy');
-            pop('colB', 'F/U', 'v');
-            pop('colF', 'Category', null, '--Select--');
-            pop('colH', 'From', null, '--Select--');
-            pop('colI', 'To', null, '--Select--');
-            pop('colFreq', 'Frequency', 'A');
-            pop('colStatus', 'Status', 'N');
-            pop('colZ', 'Month', 'NEW');
-            pop('colX', 'Currency', 'GBP');
-
+            pop('colA', 'Grouping', 'Roy'); pop('colB', 'F/U', 'v'); pop('colF', 'Category', null, '--Select--');
+            pop('colH', 'From', null, '--Select--'); pop('colI', 'To', null, '--Select--');
+            pop('colFreq', 'Frequency', 'A'); pop('colStatus', 'Status', 'N'); pop('colZ', 'Month', 'NEW'); pop('colX', 'Currency', 'GBP');
             AA_LIST = data.filter(r => r[coordinateMap['From'].val]).map(r => r[coordinateMap['From'].val]);
             calc(); if(!silent) alert("Lookups Refreshed!");
         } catch (e) { alert("Data Error."); }
     }
 
-    function updateDropdown(id, vals, defCode, prompt) {
-        const sel = document.getElementById(id);
-        let html = prompt ? `<option value="" disabled selected>${prompt}</option>` : '';
-        html += vals.map(v => `<option value="${v}">${v}</option>`).join('');
-        sel.innerHTML = html;
-        if(defCode) {
-            const opt = Array.from(sel.options).find(o => o.value.startsWith(defCode));
-            if(opt) sel.value = opt.value; else if(vals.length > 0) sel.selectedIndex = prompt ? 1 : 0;
-        }
-    }
-
-    function calcTypeAndAuto() {
-        const h = document.getElementById('colH').value, i = document.getElementById('colI').value, fFull = document.getElementById('colF').value;
-        const fu = document.getElementById('colB'), typeDisp = document.getElementById('workTypeDisplay'), freq = document.getElementById('colFreq'), bgE = document.getElementById('bgTypeE');
-        if (!h || !i || h.includes("--") || i.includes("--")) { typeDisp.innerText = "--"; bgE.value = "--"; return; }
+    function handleAccountSelection() {
+        const h = document.getElementById('colH').value, i = document.getElementById('colI').value;
+        const fu = document.getElementById('colB'), typeDisp = document.getElementById('workTypeDisplay'), freq = document.getElementById('colFreq');
+        if (!h || !i || h.includes("--") || i.includes("--")) return;
+        
         const fAA = AA_LIST.includes(h), tAA = AA_LIST.includes(i);
         let valE = "zOut"; if (fAA && tAA) valE = "xfer"; else if (!fAA && tAA) valE = "In";
-        typeDisp.innerText = valE; bgE.value = valE;
+        typeDisp.innerText = valE; document.getElementById('bgTypeE').value = valE;
+
         if (valE === "xfer") { 
             const xf = Array.from(fu.options).find(o => o.value.startsWith('xf')); if(xf) fu.value = xf.value;
             const k = Array.from(freq.options).find(o => o.value.startsWith('K')); if(k) freq.value = k.value;
             document.getElementById('colF').value = "Transfer"; 
-        } else if (fFull.toLowerCase().includes("support")) {
-            const s = Array.from(fu.options).find(o => o.value.startsWith('S')); if(s) fu.value = s.value;
         }
     }
 
-    function handleManualFU() { if(document.getElementById('colB').value.startsWith('xf')) document.getElementById('colF').value = "Transfer"; }
+    function updateDropdown(id, vals, defCode, prompt) {
+        const sel = document.getElementById(id); let html = prompt ? `<option value="" disabled selected>${prompt}</option>` : '';
+        html += vals.map(v => `<option value="${v}">${v}</option>`).join('');
+        sel.innerHTML = html;
+        if(defCode) { const opt = Array.from(sel.options).find(o => o.value.startsWith(defCode)); if(opt) sel.value = opt.value; }
+    }
+
     function handleDateChange() {
         const dStr = document.getElementById('colC').value; if(!dStr) return;
         const [y, m, d] = dStr.split('-').map(Number); const dt = new Date(y, m-1, d);
@@ -189,22 +167,22 @@
     function calc() {
         const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0;
         const tot = ((t * u) + v).toFixed(2);
-        const curValue = document.getElementById('colX').value; const curCode = curValue ? curValue.split(' - ')[0] : 'GBP';
+        const curCode = document.getElementById('colX').value.split(' - ')[0] || 'GBP';
         document.getElementById('symbol').innerText = symbols[curCode]||"£";
         document.getElementById('totalDisp').innerText = tot; return tot;
     }
     function saveRow() {
         if (!document.getElementById('colF').value || !document.getElementById('colH').value || !document.getElementById('colI').value) return alert("Required fields missing.");
-        const row = [document.getElementById('colA').value, document.getElementById('colB').value.split(' - ')[0], document.getElementById('colC').value, "", document.getElementById('bgTypeE').value, document.getElementById('colF').value.split(' - ')[0], document.getElementById('colG').value, document.getElementById('colH').value, document.getElementById('colI').value, "", document.getElementById('colK').value, document.getElementById('colFreq').value.split(' - ')[0], "", "", document.getElementById('colStatus').value.split(' - ')[0], "", "", "", "", parseFloat(document.getElementById('colT').value||0).toFixed(2), document.getElementById('colM').value, parseFloat(document.getElementById('colV').value||0).toFixed(2), calc(), document.getElementById('colX').value.split(' - ')[0], "", document.getElementById('colZ').value, VER];
+        const row = [document.getElementById('colA').value, document.getElementById('colB').value.split(' - ')[0], document.getElementById('colC').value, "", document.getElementById('bgTypeE').value, document.getElementById('colF').value.split(' - ')[0], document.getElementById('colG').value, document.getElementById('colH').value, document.getElementById('colI').value, "", "", document.getElementById('colFreq').value.split(' - ')[0], "", "", document.getElementById('colStatus').value.split(' - ')[0], "", "", "", "", parseFloat(document.getElementById('colT').value||0).toFixed(2), document.getElementById('colM').value, parseFloat(document.getElementById('colV').value||0).toFixed(2), calc(), document.getElementById('colX').value.split(' - ')[0], "", document.getElementById('colZ').value, VER];
         let data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); data.push(row); localStorage.setItem('ebs_trf', JSON.stringify(data));
-        ['colT', 'colV', 'colK', 'colG'].forEach(id => document.getElementById(id).value = ""); renderPreview();
+        renderPreview();
     }
     function renderPreview() {
         const data = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
         let h = '<table><tr><th class="w-grp">Grp</th><th class="w-fu">F/U</th><th class="w-date">Date</th><th class="w-type">Type</th><th class="w-cat">Category</th><th class="w-sort">s</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-tiny">N</th><th class="w-tiny">F</th><th class="w-tiny">S</th><th class="txt-center" style="width:25px;">Cur</th><th class="w-tot">Total</th><th class="txt-center" style="width:35px;">Mnth</th><th class="w-tiny">X</th></tr>';
         data.forEach((r, idx) => {
-            const [y, m, d] = r[2].split('-').map(Number); const dt = new Date(y, m-1, d);
-            h += `<tr><td>${r[0]}</td><td>${r[1]}</td><td>${dt.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]}</td><td>${r[4]}</td><td>${r[5]}</td><td class="txt-center">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-tiny">${r[10]?"✓":""}</td><td class="w-tiny">${r[11]}</td><td class="w-tiny">${r[14]}</td><td class="txt-center">${r[23]}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[25]}</td><td class="w-tiny"><button onclick="deleteRow(${idx})" style="background:red;border:none;color:white;cursor:pointer;padding:0 3px;">X</button></td></tr>`;
+            const dt = new Date(r[2]);
+            h += `<tr><td>${r[0]}</td><td>${r[1]}</td><td>${dt.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]}</td><td>${r[4]}</td><td>${r[5]}</td><td class="w-sort">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-tiny"></td><td class="w-tiny">${r[11]}</td><td class="w-tiny">${r[14]}</td><td class="txt-center">${r[23]}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[25]}</td><td class="w-tiny"><button onclick="deleteRow(${idx})" style="background:red;border:none;color:white;cursor:pointer;padding:0 3px;">X</button></td></tr>`;
         });
         document.getElementById('previewArea').innerHTML = h + '</table>';
     }
@@ -218,7 +196,6 @@
         tokenClient.requestAccessToken();
     }
     function clearData() { if(!wipeConfirmed) { wipeConfirmed=true; document.getElementById('wipeBtn').classList.add('active'); setTimeout(()=>{wipeConfirmed=false; document.getElementById('wipeBtn').classList.remove('active');},3000); } else { localStorage.removeItem('ebs_trf'); wipeConfirmed=false; renderPreview(); } }
-    renderPreview();
 </script>
 </body>
 </html>
